--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <div class="card">
     <h2>About me!</h2>
-    <p> Hello! I'm Kostas Piludis, a passionate web development enthusiast currently pursuing my dreams at Le Wagon Bootcamp in Tokyo. With a strong interest in design, gaming, Japan, photography, and an ever-growing list of diverse hobbies, I find myself constantly exploring new creative avenues. I believe in the power of technology to shape the world, and I'm excited to dive deeper into the dynamic world of web development, unleashing my creativity and building innovative digital experiences. Join me on this journey as we embark on an exciting adventure in the ever-evolving realm of the web! 🚀🌏</p>
-
+    <p> Hello! I'm Kostas Piludis, a passionate web development enthusiast currently pursuing my dreams at Le Wagon Bootcamp in Tokyo.</p>
+    <p> With a strong interest in design, gaming, Japan, photography, and an ever-growing list of diverse hobbies, I find myself constantly exploring new creative avenues. I believe in the power of technology to shape the world, and I'm excited to dive deeper into the dynamic world of web development, unleashing my creativity and building innovative digital experiences. Join me on this journey as we embark on an exciting adventure in the ever-evolving realm of the web! 🚀🌏</p>
   </div>
 
   <div class="card">
